add unique elementId for DataTable pathogen_strata tables

--- a/inst/report/html_report/SignalDetectionReport_body.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_body.Rmd
@@ -120,7 +120,8 @@ for(cate in params$strata){
      params$data,
      cate,
      interactive = TRUE,
-     partial = TRUE
+     partial = TRUE,
+     elementID = paste("table", pate, cate, sep = "_")
     ) 
   
   print(htmltools::tagList(dist_plot))
@@ -155,7 +156,8 @@ txt <- NULL
 if (sum(results_analysis$alarms, na.rm = TRUE) != 0) {
   SignalDetectionTool::build_signals_table(
     s_pad,
-    format = "DataTable"
+    format = "DataTable",
+    elementID = paste("all_signals_table", pate, sep = "_")
   )
 } else {
   txt <- "No signals were detected."
