--- a/inst/report/html_report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_strata.Rmd
@@ -78,7 +78,7 @@ for(st in unique(df$stratum)){
     number_of_weeks = 52,
     intervention_date = params$intervention_date,
     interactive = TRUE,
-    partial = TRUE
+    partial = FALSE
     )
 
   print(htmltools::tagList(plot_stratum))
